# taichi-nerfs

./: .gitignore  README.md  gui.py  opt.py  requirements.txt  show_gui.py  train.py  train_simple.py
data/: colmap2nerf.py
datasets/: __init__.py  base.py  colmap.py  colmap_utils.py  color_utils.py  nerf.py  ngp.py  nsvf.py  ray_utils.py
deployment/InstantNGP/: README.md  RetrainInstruction.md  requirements.txt
deployment/InstantNGP/Android_Demo/: CMakeLists.txt  README.md  main.cpp
deployment/InstantNGP/Android_Demo/c_api/lib/cmake/taichi_c_api/: TaichiConfigVersion.cmake  TaichiTargets-release.cmake  TaichiTargets.cmake
deployment/InstantNGP/Android_Demo/c_api/taichi/lib/cmake/taichi/: TaichiConfig.cmake  TaichiConfigVersion.cmake
deployment/InstantNGP/Android_Demo/scripts/: build-android.sh  build-taichi-android.sh  compile_and_run_nerf.sh  recompile_and_run_nerf.sh
deployment/InstantNGP/iOS_Demo/: README.md
deployment/InstantNGP/iOS_Demo/TaichiNGPDemo/: AppDelegate.h  AppDelegate.m  Info.plist  (+5 more)
deployment/InstantNGP/iOS_Demo/TaichiNGPDemo.xcodeproj/: project.pbxproj
deployment/InstantNGP/taichi_ngp/: kernels.py  new_kernels.py  taichi_ngp.py  utils.py
deployment/InstantNGP/utils/: app_fp32.cpp  app_fp32.hpp  stb_image_writer.h  utils.cpp  utils.hpp
modules/: distortion.py  hash_encoder.py  hash_encoder_deploy.py  hash_encoder_half.py  intersection.py  losses.py  networks.py  ray_march.py  rendering.py  sh_utils.py  spherical_harmonics.py  triplane.py  utils.py  volume_render_test.py  volume_train.py
notebooks/: autodiff.ipynb  pipeline.ipynb
scripts/: train_360_v2_garden.ps1  train_360_v2_garden.sh  train_from_video.ps1  train_from_video.sh  train_ngp_dataset.sh  train_nsvf_deploy.sh  train_nsvf_lego.ps1  train_nsvf_lego.sh
(+53 files in other folders)
